--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/TradaTech/lake#readme",
   "dependencies": {
-    "@iceteachain/web3": "^0.2.5",
+    "@glitchdefi/web3": "^0.0.1",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "fastify": "^2.12.0",
