--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "fastify": "^2.12.0",
+    "fastify-cors": "^5.2.0",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
